--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: ruby
 
+cache: bundler
+
 rvm: 
 - 2.5.8
-- 2.6.6
-- 2.7.1
+- 2.6.5
+- 2.7.2
+- ruby-head
 
 install: bundle install --retry=3
 
